# projects_and_contracts

./: .gitignore  Dockerfile  README.md  alembic.ini  contract.py  docker-compose.yml  install.cmd  install.sh  main.py  project.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2c0d79125a7f_initial_migrate.py  81fe50ef8f52_initial_migrate.py
db/: engine.py  models.py
src/: commads.py  facades.py  renders.py  settings.py
src/commands/: __init__.py  base.py  contract.py  options.py  project.py
src/db/: engine.py  models.py  settings.py
